--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,14 +1,26 @@
-Prefix: Apia Lucky Clover
+Prefix: '&8&l[ &6Apia Lucky Clover &8&l] &7&l»'
 CLOVER:
   MATERIAL: DOUBLE_PLANT
   NAME: '&eLucky Clover'
   LORE:
-  - '&7RightClick for Use'
+   - '&7Right Click and Win Reward'
+   - ''
+   - '&aEarn what you can:'
+   - '&8&l»» &c1 &bDiamond &7(%&650&7)'
+   - '&8&l»» &c2 &bDiamonds &7(%&650&7)'
   CHANCE: 5
 
 INVENTORY_FULL: '&7Your inventory is full, clover dropped to the ground.'
 GIVE_YOUR_CLOVER: '&7You found a lucky clover in grass'
 SOUND: NOTE_PLING
 REWARDS:
-  - broadcast <PLAYER> use a CLOVER
+  - give <PLAYER> diamond 1
+  - give <PLAYER> diamond 2
 SUCCESSFUL_MESSAGE: '&7Your rewards was given.'
+RELOAD_MESSAGE: '&7Apia Lucky Clover Reloaded.'
+PERM_ERROR: '&7You do not have permission for this command'
+GAVE_CLOVER: '&7You gave a clover to &6To: &a<PLAYER>'
+PLAYER_ERROR: '&7We do not find this player &6Searched Player: &c<PLAYER>'
+HELP:
+  - '&8&l»» &6/alc reload'
+  - '&8&l»» &6/alc give <PLAYER> <AMOUNT>'
