--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -7,3 +7,7 @@ website: 'https://mcdeyiz.com/'
 api-version: 1.13
 depend: [Vault]
 commands:
+  alc:
+    description: Main Command of Apia Lucky Clover Plugin
+    aliases: [apialuckyclover]
+    permission: [alc.reload, alc.give]
